Improved names of endpoints
