# auth/src/app.rs
@@ -53,12 +53,12 @@ impl App {
         let app = Router::new()
             .route("/login", post(handlers::login))
             .route("/signup", post(handlers::signup))
-            .route("/update", put(handlers::update_user))
-            .route("/create_post", post(handlers::create_post))
-            .route("/update_post/:id", put(handlers::update_post))
-            .route("/remove_post/:id", delete(handlers::remove_post))
-            .route("/get_post/:id", get(handlers::get_post))
-            .route("/get_posts", get(handlers::get_posts))
+            .route("/profile", put(handlers::update_user))
+            .route("/post", post(handlers::create_post))
+            .route("/post/:id", put(handlers::update_post))
+            .route("/post/:id", delete(handlers::remove_post))
+            .route("/post/:id", get(handlers::get_post))
+            .route("/posts", get(handlers::get_posts))
             .fallback(handlers::fallback)
             .layer(Extension(Arc::new(users_db_conn_pool)))
             .layer(Extension(Arc::new(Mutex::new(posts_grpc_client))));
